[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ptrender"
authors = [{name = "Andy Kluger"}]
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["pyratemp", "template", "render", "renderer"]
requires-python = ">=3.6"
dynamic = ["version", "description"]
dependencies = ["plumbum", "pyratemp"]
classifiers = [
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]

[project.urls]
Home = "https://github.com/andydecleyre/ptrender"

[project.optional-dependencies]
yaml = ["strictyaml"]
dev = ["flit", "ipython"]

[project.scripts]
ptrender = "ptrender.ptrender:TemplateRenderer"
vwrite = "ptrender.ptrender:VWriter"
